@@ -52,12 +52,16 @@ int
 
 //  Cancel the reader on the specified socket or fd, if any
 void
-    zloop_cancel (zloop_t *self, zmq_pollitem_t *item);
+    zloop_poller_end (zloop_t *self, zmq_pollitem_t *item);
 
 //  Register a timer that will go off after 'delay' msecs, and will
 //  repeat 'times' times, unless 'times' is zero, meaning repeat forever.
 int
     zloop_timer (zloop_t *self, size_t delay, size_t times, zloop_fn handler, void *arg);
+
+//  Cancel all timers for a specific argument (as provided in zloop_timer)
+void
+    zloop_timer_end (zloop_t *self, void *arg);
 
 //  Set verbose tracing of reactor on/off
 void
